--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "pm2 start main.js --watch --no-daemon"
+    "start": "pm2 start main.js --watch --ignore-watch='data/* sessions/*' --no-daemon"
   },
   "repository": {
     "type": "git",
