--- a/package.json
+++ b/package.json
@@ -24,7 +24,12 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "helmet": "^3.23.1",
     "sanitize-html": "^1.18.2"
+  },
+  "nodemonConfig": {
+    "ignore": ["data/*", "sessions/*"],
+    "delay": "500"
   }
 }
