--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "helmet": "^3.23.1",
+    "lowdb": "^1.0.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sanitize-html": "^1.18.2",
