--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sanitize-html": "^1.18.2",
-    "session-file-store": "^1.4.0"
+    "session-file-store": "^1.4.0",
+    "shortid": "^2.2.15"
   },
   "nodemonConfig": {
     "ignore": [
