Multi User - 2-1. 회원 정보 저장

--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   "nodemonConfig": {
     "ignore": [
       "data/*",
-      "sessions/*"
+      "sessions/*",
+      "db.json"
     ],
     "delay": "500"
   }
