--- a/old_version/package.json
+++ b/old_version/package.json
@@ -29,6 +29,7 @@
     "express-session": "^1.17.1",
     "helmet": "^3.23.1",
     "lowdb": "^1.0.0",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pug": "^3.0.0",
