구 버전: MySQL 에 세션 저장

--- a/old_version/package.json
+++ b/old_version/package.json
@@ -26,6 +26,7 @@
     "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "express": "^4.17.1",
+    "express-mysql-session": "^2.1.4",
     "express-session": "^1.17.1",
     "helmet": "^3.23.1",
     "lowdb": "^1.0.0",
