--- a/new_version/package.json
+++ b/new_version/package.json
@@ -30,6 +30,7 @@
     "helmet": "^3.23.1",
     "lowdb": "^1.0.0",
     "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
     "sanitize-html": "^1.18.2",
     "session-file-store": "^1.4.0",
